Preventing download labels from wrapping (they're quite hard to read otherwise if the help text wraps)

--- a/Products/CNXContent/skins/CNXContent/cnx-styles/newlook/metacontent.css
+++ b/Products/CNXContent/skins/CNXContent/cnx-styles/newlook/metacontent.css
@@ -768,6 +768,10 @@ td, th{
   padding: .2em .5em .2em 0;
 }
 
+#cnx_about_history td.cnx_before{
+  white-space: nowrap;
+}
+
 #cnx_about_history .cnx_name{
   font-weight: bold;
 }
